syntax = "proto3";

package com.sushkpavel;

option java_multiple_files = true;

service CompileService {
  rpc compileSolution (SolutionSubmission) returns (TestResult);
}

message SolutionSubmission {
  string id = 1;
  string userId = 2;
  string taskId = 3;
  string code = 4;
  string language = 5;
  string input = 7;
  string status = 8;
}

message TestResult {
  string id = 1;
  string userId = 2;
  string solutionId = 3;
  string testId = 4;
  string actualResult = 5;
  bool success = 6;
}
